# Voice-Control

./: .env.example  .gitignore  CONTEXT.md  README.md  Research.md  pyproject.toml
.claude/: settings.local.json
core/: types.py
core/prompts/: MEMORY_PRIVATE_template.md  MEMORY_template.md
docs/: positioning.md  validation_results.md
evals/: woz_protocol.md
evals/clarifying_questions/: prompts.jsonl  results.md  runner.py
evals/mem0_eval/: results.md
evals/tts_quality/: notes.md
