[project]
name = "voice-brainstorm-partner"
version = "0.0.1"
description = "Voice-first developer brainstorming partner — Socratic posture, persistent project memory, MCP-first distribution."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # STT
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.1",
    "webrtcvad>=2.0.10",
    "noisereduce>=3.0.0",

    # TTS — Kokoro-82M via onnx (Phase 0.4 will confirm)
    "kokoro-onnx>=0.3.0",

    # LLM clients
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
    "ollama>=0.4.0",

    # Memory
    "mem0ai>=0.1.50",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",

    # MCP
    "mcp>=1.0.0",

    # UI (demo client)
    "gradio>=5.0.0",

    # Context capture
    "pygetwindow>=0.0.9 ; platform_system=='Windows'",
    "pyperclip>=1.9.0",

    # Misc
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "mcp_server", "server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["core"]

[[tool.mypy.overrides]]
module = ["faster_whisper", "kokoro_onnx", "mem0", "chromadb", "webrtcvad", "noisereduce", "pygetwindow"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
